--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe4.log
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe5.log
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe6.log
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe7.log
+*.dwlt
