--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe6.log
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe7.log
 *.dwlt
 *.dwlt
+Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe0.log
