--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe7.log
 *.dwlt
 *.dwlt
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+Proyecto-Gnomos/UserSettings/Layouts/default-2022.dwlt
