--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe7.log
 *.dwlt
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Proyecto-Gnomos/UserSettings/Layouts/default-2022.dwlt
+*.dwlt
