--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe7.log
 Proyecto-Gnomos/Logs/shadercompiler-UnityShaderCompiler.exe0.log
 Proyecto-Gnomos/UserSettings/Layouts/default-2022.dwlt
 *.dwlt
+*.log
+*.dwlt
+*.dwlt
